# halfremembered-launcher

./: .gitignore  .hrlauncher.toml  .hrlauncher.toml.example  BOTS.md  CONFIG.md  Cargo.toml  README.md  build-windows.sh  integration.sh  next.md
.cargo/: config.toml
botdocs/: 01-feat-notify-plan.md
launcher/: Cargo.toml
launcher/src/: client_daemon.rs  client_registry.rs  config.rs  file_watcher.rs  lib.rs  main.rs  rsync_utils.rs  ssh_client.rs  ssh_server.rs
launcher/tests/: fd_leak_test.rs  watch_sync_test.rs
protocol/: Cargo.toml
protocol/src/: frame.rs  lib.rs  message_types.rs
