[workspace]
members = ["protocol", "launcher"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
ssh2 = "0.9"
russh = "0.54"
russh-keys = "0.45"
russh-sftp = "2.0"
ssh-key = { version = "0.6", features = ["ed25519", "encryption", "std"] }
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
bytes = "1.0"
walkdir = "2.5"
hostname = "0.4"
rand_core = "0.6"
uuid = { version = "1.0", features = ["v4"] }
fast_rsync = "0.2"
