[package]
name = "halfremembered-launcher"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "halfremembered-launcher"
path = "src/main.rs"

[dependencies]
halfremembered-protocol = { path = "../protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
russh = { workspace = true }
russh-keys = { workspace = true }
russh-sftp = { workspace = true }
ssh-key = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
hostname = { workspace = true }
rand_core = { workspace = true }
fast_rsync = { workspace = true }
toml = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
globset = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
